Only include Darwin examples when supported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,11 @@ if(PROJECT_IS_TOP_LEVEL)
   enable_testing()
   add_subdirectory(test)
 
-  add_subdirectory(example/app/darwin-arm64 EXCLUDE_FROM_ALL)
-  add_subdirectory(example/app/darwin-x64 EXCLUDE_FROM_ALL)
+  if(APPLE)
+    if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
+      add_subdirectory(example/app/darwin-arm64 EXCLUDE_FROM_ALL)
+    else()
+      add_subdirectory(example/app/darwin-x64 EXCLUDE_FROM_ALL)
+    endif()
+  endif()
 endif()
