--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,12 +110,5 @@ install(DIRECTORY include/appling DESTINATION include)
 if(PROJECT_IS_TOP_LEVEL)
   enable_testing()
   add_subdirectory(test)
-
-  if(APPLE)
-    if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
-      add_subdirectory(example/app/darwin-arm64 EXCLUDE_FROM_ALL)
-    else()
-      add_subdirectory(example/app/darwin-x64 EXCLUDE_FROM_ALL)
-    endif()
-  endif()
+  add_subdirectory(example)
 endif()
