--- a/example/app/darwin-arm64/CMakeLists.txt
+++ b/example/app/darwin-arm64/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(example_darwin_C)
+project(example_darwin C)
 
 set(APP ${PROJECT_SOURCE_DIR}/Example.app)
 
