--- a/example/app/darwin-x64/CMakeLists.txt
+++ b/example/app/darwin-x64/CMakeLists.txt
@@ -1,53 +1,39 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(example_darwin C)
+project(example_darwin_x64 C)
 
-set(APP ${PROJECT_SOURCE_DIR}/Example.app)
-
-add_executable(
-  example_darwin
-  ../main.c
-  ${APP}/Contents/Info.plist
-  ${APP}/Contents/Resources/app/checkout
-  ${APP}/Contents/Resources/app/platform.mp3
-)
+add_executable(example_darwin_x64 ../main.c)
 
 target_include_directories(
-  example_darwin
+  example_darwin_x64
   PRIVATE
     $<TARGET_PROPERTY:appling,INCLUDE_DIRECTORIES>
 )
 
 target_compile_definitions(
-  example_darwin
+  example_darwin_x64
   PRIVATE
     EXAMPLE_APPLING_PLATFORM_DIR="${PROJECT_SOURCE_DIR}/../../holepunch"
 )
 
 set_target_properties(
-  example_darwin
+  example_darwin_x64
   PROPERTIES
   OUTPUT_NAME Example
-  MACOSX_BUNDLE YES
-  MACOSX_BUNDLE_INFO_PLIST "${APP}/Contents/Info.plist"
-  XCODE_ATTRIBUTE_PRODUCT_NAME "Example"
-  XCODE_ATTRIBUTE_BUNDLE_IDENTIFIER "com.example.Example"
-)
-
-set_source_files_properties(
-  ${APP}/Contents/Resources/app/checkout
-  PROPERTIES
-  MACOSX_PACKAGE_LOCATION "Resources/app"
-)
-
-set_source_files_properties(
-  ${APP}/Contents/Resources/app/platform.mp3
-  PROPERTIES
-  MACOSX_PACKAGE_LOCATION "Resources/app"
 )
 
 target_link_libraries(
-  example_darwin
+  example_darwin_x64
   PRIVATE
     appling_static
+)
+
+install(
+  TARGETS example_darwin_x64
+  RUNTIME DESTINATION Example.app/Contents/MacOS
+)
+
+install(
+  DIRECTORY Example.app/Contents
+  DESTINATION Example.app
 )
