Simplify example app builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,5 +111,5 @@ install(DIRECTORY include/appling DESTINATION include)
 if(PROJECT_IS_TOP_LEVEL)
   enable_testing()
   add_subdirectory(test)
-  add_subdirectory(example)
+  add_subdirectory(example/app)
 endif()
