Add Linux example app

--- a/example/app/CMakeLists.txt
+++ b/example/app/CMakeLists.txt
@@ -36,6 +36,10 @@ if(APPLE)
   endif()
 endif()
 
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+  add_subdirectory(linux-x64)
+endif()
+
 if(WIN32)
   add_subdirectory(win32-x64)
 endif()
