Add Linux arm64 platform fixture and example app

--- a/test/fixtures/Makefile
+++ b/test/fixtures/Makefile
@@ -8,5 +8,6 @@ platform-%.tar:
 all: \
 	platform-darwin-arm64.tar \
 	platform-darwin-x64.tar \
+	platform-linux-arm64.tar \
 	platform-linux-x64.tar \
 	platform-win32-x64.tar
