Fix example app paths on Linux

--- a/example/app/linux-arm64/CMakeLists.txt
+++ b/example/app/linux-arm64/CMakeLists.txt
@@ -1,6 +1,12 @@
+set_target_properties(
+  example
+  PROPERTIES
+  OUTPUT_NAME example
+)
+
 install(
   TARGETS example
-  RUNTIME DESTINATION Example.AppDir
+  RUNTIME DESTINATION Example.AppDir/usr/bin
 )
 
 install(
