--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-if(WIN32)
-  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-endif()
-
 project(appling C)
 
 option(ENABLE_ACL OFF)
@@ -62,7 +56,7 @@ set_target_properties(
   appling
   PROPERTIES
   C_STANDARD 99
-  POSITION_INDEPENDENT_CODE 1
+  POSITION_INDEPENDENT_CODE ON
 )
 
 target_sources(
@@ -89,14 +83,14 @@ target_include_directories(
   appling
   PUBLIC
     include
-    $<TARGET_PROPERTY:uv,INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:fs,INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:uv,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:fs,INTERFACE_INCLUDE_DIRECTORIES>
   PRIVATE
-    $<TARGET_PROPERTY:archive,INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:path,INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:log,INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:hex,INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:z32,INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:archive,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:path,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:log,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:hex,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:z32,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 add_library(appling_static STATIC $<TARGET_OBJECTS:appling>)
