Use `INTERFACE_INCLUDE_DIRECTORIES`

--- a/example/app/CMakeLists.txt
+++ b/example/app/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(example main.c)
 target_include_directories(
   example
   PRIVATE
-    $<TARGET_PROPERTY:appling,INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:appling,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 target_compile_definitions(
