`{pear -> launch}.{dylib,dll}`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,23 +93,23 @@ target_include_directories(
     $<TARGET_PROPERTY:log,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
-add_library(appling_entry OBJECT)
+add_library(appling_launch OBJECT)
 
 set_target_properties(
-  appling_entry
+  appling_launch
   PROPERTIES
   C_STANDARD 99
   POSITION_INDEPENDENT_CODE ON
 )
 
 target_sources(
-  appling_entry
+  appling_launch
   PRIVATE
     src/entry.c
 )
 
 target_include_directories(
-  appling_entry
+  appling_launch
   PUBLIC
     include
     $<TARGET_PROPERTY:appling,INTERFACE_INCLUDE_DIRECTORIES>
@@ -140,18 +140,18 @@ target_link_libraries(
     z32_static
 )
 
-add_library(appling_entry_shared SHARED $<TARGET_OBJECTS:appling_entry>)
+add_library(appling_launch_shared SHARED $<TARGET_OBJECTS:appling_launch>)
 
 set_target_properties(
-  appling_entry_shared
+  appling_launch_shared
   PROPERTIES
-  OUTPUT_NAME pear
+  OUTPUT_NAME launch
   PREFIX ""
   WINDOWS_EXPORT_ALL_SYMBOLS ON
 )
 
 target_link_libraries(
-  appling_entry_shared
+  appling_launch_shared
   PRIVATE
     uv
     path_shared
