Add corestore to platform fixture

--- a/test/fixtures/Makefile
+++ b/test/fixtures/Makefile
@@ -3,7 +3,8 @@ platform-%.tar:
 	--create \
 	--file $@ \
 	--directory platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0 \
-	by-arch/$*
+	by-arch/$*/ \
+	corestore/
 
 all: \
 	platform-darwin-arm64.tar \
