Add Windows ARM64 platform archive

--- a/example/app/CMakeLists.txt
+++ b/example/app/CMakeLists.txt
@@ -46,5 +46,9 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 endif()
 
 if(WIN32)
-  add_subdirectory(win32-x64)
+  if(CMAKE_SYSTEM_PROCESSOR MATCHES "ARM64")
+    add_subdirectory(win32-arm64)
+  else()
+    add_subdirectory(win32-x64)
+  endif()
 endif()
