--- a/example/app/darwin-x64/CMakeLists.txt
+++ b/example/app/darwin-x64/CMakeLists.txt
@@ -1,3 +1,9 @@
+set_target_properties(
+  example
+  PROPERTIES
+  OUTPUT_NAME Example
+)
+
 install(
   TARGETS example
   RUNTIME DESTINATION Example.app/Contents/MacOS
