--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ if(NOT TARGET fs)
   add_subdirectory(vendor/libfs EXCLUDE_FROM_ALL)
 endif()
 
+if(NOT TARGET fx)
+  add_subdirectory(vendor/libfx EXCLUDE_FROM_ALL)
+endif()
+
 if(NOT TARGET log)
   add_subdirectory(vendor/liblog EXCLUDE_FROM_ALL)
 endif()
@@ -102,6 +106,7 @@ target_include_directories(
     $<TARGET_PROPERTY:path,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:log,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:compact,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:fx,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 add_library(appling_launch OBJECT)
@@ -145,6 +150,7 @@ target_link_libraries(
   PRIVATE
     archive_static
     fs_static
+    fx_static
     path_static
     log_static
     hex_static
@@ -179,6 +185,8 @@ install(DIRECTORY include/appling DESTINATION include)
 
 if(PROJECT_IS_TOP_LEVEL)
   enable_testing()
+
   add_subdirectory(test)
+
   add_subdirectory(example/app)
 endif()
