--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/libcompact"]
 	path = vendor/libcompact
 	url = ../../holepunchto/libcompact.git
+[submodule "vendor/bare"]
+	path = vendor/bare
+	url = git@github.com:holepunchto/bare.git
