--- a/package.json
+++ b/package.json
@@ -12,14 +12,7 @@
   },
   "homepage": "https://github.com/holepunchto/libappling#readme",
   "dependencies": {
-    "bare-fs": "^2.1.0",
-    "bare-module": "^3.0.2",
-    "bare-path": "^2.1.0",
-    "bare-process": "^1.2.1",
-    "corestore": "^6.15.13",
-    "hyperdrive": "^11.6.3",
-    "hyperswarm": "^4.7.13",
-    "pear-updater": "^3.0.2"
+    "pear-updater-bootstrap": "^1.0.1"
   },
   "devDependencies": {
     "standard": "^17.0.0"
