Use relative submodule path

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = ../../holepunchto/libcompact.git
 [submodule "vendor/bare"]
 	path = vendor/bare
-	url = git@github.com:holepunchto/bare.git
+	url = ../../holepunchto/bare.git
