Support specifying minimum checkout length in `appling_resolve()`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,11 @@ list(APPEND tests
   parse-z32
   paths
   resolve-both
+  resolve-both-minimum-length
+  resolve-both-minimum-length-mismatch
   resolve-current
+  resolve-current-minimum-length
+  resolve-current-minimum-length-mismatch
   resolve-next
 )
 
