--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "homepage": "https://github.com/holepunchto/libappling#readme",
   "dependencies": {
-    "pear-updater-bootstrap": "^1.1.0"
+    "pear-updater-bootstrap": "^1.1.0",
+    "udx-native": "~1.11.2"
   },
   "devDependencies": {
     "standard": "^17.0.0"
