Fall back to previous dependencies

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "homepage": "https://github.com/holepunchto/libappling#readme",
   "dependencies": {
-    "pear-updater-bootstrap": "^1.1.0",
-    "udx-native": "~1.10.5"
+    "pear-updater-bootstrap": "^1.1.0"
   },
   "devDependencies": {
     "standard": "^17.0.0"
