--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       matrix:
         include:
-        - os: ubuntu-latest
-          platform: linux
-          arch: x64
-        - os: macos-latest
-          platform: darwin
-          arch: arm64
+        # - os: ubuntu-latest
+        #   platform: linux
+        #   arch: x64
+        # - os: macos-latest
+        #   platform: darwin
+        #   arch: arm64
         - os: windows-latest
           platform: win32
           arch: x64
