--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,42 +7,49 @@ on:
     branches:
       - main
 jobs:
-  test:
-    strategy:
-      matrix:
-        include:
-        # - os: ubuntu-latest
-        #   platform: linux
-        #   arch: x64
-        # - os: macos-latest
-        #   platform: darwin
-        #   arch: arm64
-        - os: windows-latest
-          platform: win32
-          arch: x64
-    runs-on: ${{ matrix.os }}
-    name: ${{ matrix.platform }}-${{ matrix.arch }}
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - uses: actions/cache@v4
-      with:
-        path: vendor/bare/corestore
-        key: corestore-${{ matrix.platform }}-${{ matrix.arch }}
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - run: npm install -g bare-dev
-    - run: bare-dev configure --debug --platform ${{ matrix.platform }} --arch ${{ matrix.arch }}
-    - run: bare-dev build --debug
-    - run: bare-dev test --debug
+  # test:
+  #   strategy:
+  #     matrix:
+  #       include:
+  #       # - os: ubuntu-latest
+  #       #   platform: linux
+  #       #   arch: x64
+  #       # - os: macos-latest
+  #       #   platform: darwin
+  #       #   arch: arm64
+  #       - os: windows-latest
+  #         platform: win32
+  #         arch: x64
+  #   runs-on: ${{ matrix.os }}
+  #   name: ${{ matrix.platform }}-${{ matrix.arch }}
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #     with:
+  #       submodules: recursive
+  #   - uses: actions/cache@v4
+  #     with:
+  #       path: vendor/bare/corestore
+  #       key: corestore-${{ matrix.platform }}-${{ matrix.arch }}
+  #   - uses: actions/setup-node@v4
+  #     with:
+  #       node-version: lts/*
+  #   - run: npm install -g bare-dev
+  #   - run: bare-dev configure --debug --platform ${{ matrix.platform }} --arch ${{ matrix.arch }}
+  #   - run: bare-dev build --debug
+  #   - run: bare-dev test --debug
   bootstrap:
     runs-on: windows-latest
     name: bootstrap
     steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - run: npm i -g pear-updater-bootstrap
-    - run: pear-updater-bootstrap 6b8374f1c0809ed23cfc371e87896c8d3bb593f2451d4d8de895d628941818dc bootstrap
+    - run: npm i -g bare-runtime
+    - run: npm i
+    - run: node --version
+    - run: node bootstrap.js
+    - run: bare --version
+    - run: bare bootstrap.js
