--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,13 +28,14 @@ jobs:
         submodules: recursive
     - uses: actions/cache@v4
       with:
-        path: vendor/bare/corestore
+        path: build/corestore
         key: corestore-${{ matrix.platform }}-${{ matrix.arch }}
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - run: npm install -g bare-dev
-    - run: bare-dev configure --debug --platform ${{ matrix.platform }} --arch ${{ matrix.arch }}
-    - run: bare-dev build --debug
-    - run: bare-dev test --debug
-      if: ${{ matrix.platform == 'linux' || matrix.platform == 'darwin' }}
+    - run: npm install -g bare-make
+    - run: npm install
+    - run: npm install --prefix vendor/bare
+    - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
+    - run: bare-make build
+    - run: bare-make test
