--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,4 @@ jobs:
     - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
     - run: bare-make build
     - run: bare-make test
+      if: ${{ matrix.platform == 'linux' || matrix.platform == 'darwin' }}
