Disable Windows entirely

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,9 @@ jobs:
         - os: macos-latest
           platform: darwin
           arch: arm64
-        - os: windows-latest
-          platform: win32
-          arch: x64
+        # - os: windows-latest
+        #   platform: win32
+        #   arch: x64
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.platform }}-${{ matrix.arch }}
     steps:
@@ -39,4 +39,3 @@ jobs:
     - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
     - run: bare-make build
     - run: bare-make test
-      if: ${{ matrix.platform == 'linux' || matrix.platform == 'darwin' }}
