--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,13 @@ jobs:
     strategy:
       matrix:
         include:
-        - os: ubuntu-22.04
+        - os: ubuntu-latest
           platform: linux
           arch: x64
-        - os: macos-14
+        - os: macos-latest
           platform: darwin
           arch: arm64
-        - os: windows-server-latest
+        - os: windows-latest
           platform: win32
           arch: x64
     runs-on: ${{ matrix.os }}
