--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,19 +23,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.platform }}-${{ matrix.arch }}
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - uses: actions/cache@v4
-      with:
-        path: build/corestore
-        key: corestore-${{ matrix.platform }}-${{ matrix.arch }}
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - run: npm install -g bare-make
-    - run: npm install
-    - run: npm install --prefix vendor/bare
-    - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
-    - run: bare-make build
-    - run: bare-make test
+    - run: npm install -g drives
+    - run: drives mirror qogbhqbcxknrpeotyz7hk4x3mxuf6d9mhb1dxm6ms5sdn6hh1uso prebuilds
