--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,8 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+    - run: choco upgrade llvm
+      if: ${{ matrix.platform == 'win32' }}
     - run: npm install -g bare-make
     - run: npm install
     - run: npm install --prefix vendor/bare
