--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         node-version: lts/*
     - run: choco upgrade llvm
       if: ${{ matrix.platform == 'win32' }}
-    - run: Get-NetFirewallProfile | Set-NetFirewallProfile -Enabled False
+    - run: get-netfirewallprofile | set-netfirewallprofile -enabled false
       shell: pwsh
       if: ${{ matrix.platform == 'win32' }}
     - run: npm install -g bare-make
