--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cmake-bare-bundle": "^2.1.2",
     "cmake-fetch": "^1.1.0",
     "cmake-npm": "^1.0.2",
-    "standard": "^17.0.0"
+    "prettier": "^3.4.1",
+    "prettier-config-standard": "^7.0.0"
   }
 }
