--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pear-updater-bootstrap": "^1.1.0"
   },
   "devDependencies": {
+    "cmake-bare": "^1.4.0",
     "cmake-bare-bundle": "^2.1.2",
     "cmake-fetch": "^1.1.0",
     "cmake-npm": "^1.0.2",
