--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - run: |
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 20
+        if: ${{ matrix.platform == 'linux' }}
       - run: choco upgrade llvm
         if: ${{ matrix.platform == 'win32' }}
       - run: npm install -g bare-make
