Add platform and architecture to checkout file

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cmake-bare-bundle": "^2.1.2",
     "cmake-fetch": "^1.1.0",
     "cmake-npm": "^1.0.2",
+    "compact-encoding": "^2.16.0",
     "prettier": "^3.4.1",
     "prettier-config-standard": "^7.0.0"
   }
