--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,10 +28,7 @@ endif()
 add_subdirectory(fixtures)
 
 foreach(test IN LISTS tests)
-  add_executable(${test} ${test}.c
-    fixtures/app.h
-    fixtures/applings.h
-  )
+  add_executable(${test} ${test}.c fixtures/app.h)
 
   target_link_libraries(
     ${test}
