--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(cmake-bare-bundle REQUIRED PATHS node_modules/cmake-bare-bundle)
 find_package(cmake-fetch REQUIRED PATHS node_modules/cmake-fetch)
 find_package(cmake-npm REQUIRED PATHS node_modules/cmake-npm)
 
-project(appling C)
+project(appling C CXX ASM)
 
 if(APPLE)
   enable_language(OBJC)
