Install NASM on Windows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,8 @@ jobs:
         if: ${{ matrix.platform == 'linux' }}
       - run: choco upgrade llvm
         if: ${{ matrix.platform == 'win32' }}
+      - run: choco install nasm
+        if: ${{ matrix.platform == 'win32' }}
       - run: npm install -g bare-make
       - run: npm install
       - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
